Magins arrumados + temListaFiltroADM

--- a/src/main/webapp/criarUsuarioAdm.xhtml
+++ b/src/main/webapp/criarUsuarioAdm.xhtml
@@ -18,6 +18,7 @@
 	</p:growl>
 
 <center>
+<div class="naosei">
 	<p:panel value="Login" style="width: 600px">
 		
 		<h:graphicImage library="img" name="/logo-senai.png" style="width:300px; margin: 7px;"/>
@@ -63,6 +64,7 @@
 
 		</p:panel>
 	</p:panel>
+</div>
 	</center>
 
 </h:body>
