--- a/src/main/webapp/empresasADM.xhtml
+++ b/src/main/webapp/empresasADM.xhtml
@@ -16,7 +16,7 @@
 
 	<ui:define name="content">
 		<center>
-			<div align="center" style="margin-top: -5% !important;">
+			<div align="center" style="margin-bottom:20px; margin-top:25px">
 				<h:graphicImage style="width: 40%;" library="img"
 					name="/logo-senai.png" />
 			</div>
