--- a/src/main/webapp/perfilADM.xhtml
+++ b/src/main/webapp/perfilADM.xhtml
@@ -14,6 +14,7 @@
 <h:body>
 
 <center>
+<div class="naosei">
 	<p:panel value="Login" style="width: 600px">
 		
 		<h:graphicImage library="img" name="/logo-senai.png" style="width:300px; margin: 7px;"/>
@@ -52,6 +53,7 @@
 
 		</p:panel>
 	</p:panel>
+</div>
 	</center>
 
 </h:body>
