--- a/src/main/webapp/alterarPerfilEmpresa.xhtml
+++ b/src/main/webapp/alterarPerfilEmpresa.xhtml
@@ -11,6 +11,9 @@
 	<ui:define name="content">
 
 		<h:body>
+			<p:growl>
+				<p:autoUpdate />
+			</p:growl>
 
 			<center>
 				<p:panel value="Login" style="width: 600px">
@@ -53,7 +56,9 @@
 									<br />
 									<p:outputLabel id="email" value="Email: " />
 									<p:inputText value="#{usuarioMBean.emp.email}"
-										style="font-weight: bold;" />
+										style="font-weight: bold;">
+										<f:validator validatorId="custom.emailValidator" />
+									</p:inputText>
 									<br />
 									<p:outputLabel id="telefone" value="Telefone: " />
 									<p:inputText value="#{usuarioMBean.emp.telefone}"
@@ -73,13 +78,14 @@
 						</h:form>
 
 						<p />
-						
+
 						<h:form>
-					<center>
-						<h:commandButton value="Voltar" ajax="false" action="perfilEmpresa"
-							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
-					</center>
-				</h:form>
+							<center>
+								<h:commandButton value="Voltar" ajax="false"
+									action="perfilEmpresa"
+									style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
+							</center>
+						</h:form>
 
 					</p:panel>
 				</p:panel>
