--- a/src/main/webapp/temfiltro.xhtml
+++ b/src/main/webapp/temfiltro.xhtml
@@ -16,14 +16,76 @@
 
 				<h:form>
 					<center>
-						<h:panelGrid columns="1">
+
+						<h:panelGrid columns="1" style="margin-bottom:15px"
+							cellpadding="5">
 
 							<h:outputText value="Nome da Vaga: " />
 							<p:inputText value="#{a}" required="true" style="width: 350px;" />
 							<p />
 
+							<p:outputLabel for="estado" value="Estados:" />
+							<p:selectOneMenu id="estado" value="#{a}" style="width:160px">
+								<f:selectItem itemLabel="Estados" itemValue="" />
+								<f:selectItems value="#{checkboxView.cities}" />
+							</p:selectOneMenu>
+							<p />
+
+							<h:outputLabel for="cidades" value="Cidades:" />
+							<p:selectCheckboxMenu id="cidades"
+								value="#{checkboxView.cities}" label="Cidades"
+								style="width:160px"
+								filter="true" filterMatchMode="startsWith"
+								panelStyle="width:290px">
+								<f:selectItems value="#{checkboxView.cities}" />
+							</p:selectCheckboxMenu>
+							<p/>
+
+							<h:outputLabel for="area" value="Área:" />
+							<p:selectOneMenu required="true" style="width: 160px"
+								panelStyle="width:150px" id="area" value="#{a}">
+								<f:selectItem itemLabel="" itemValue="" />
+								<f:selectItems value="#{a}" />
+							</p:selectOneMenu>
+							<P />
+
+							<h:outputLabel for="curso" value="Curso:" />
+							<p:selectOneMenu required="true" style="width: 160px"
+								panelStyle="width:150px" id="curso" value="#{a}">
+								<f:selectItem itemLabel="" itemValue="" />
+								<f:selectItems value="#{a}" />
+							</p:selectOneMenu>
+							<P />
+
+							<h:outputLabel for="semestre" value="Semestres:" />
+							<p:selectCheckboxMenu style="width: 160px" id="sem"
+								value="#{filtroService.eFiltro.semestre}" multiple="true"
+								filter="true" panelStyle="width:290px">
+								<f:selectItems value="#{a}" />
+							</p:selectCheckboxMenu>
+							<p />
+
+							<h:outputLabel for="idioma" value="Idioma:" />
+							<p:selectCheckboxMenu style="width: 160px" id="idioma"
+								value="#{a}" multiple="true" filter="true"
+								panelStyle="width:290px">
+								<f:selectItems value="#{a}" />
+							</p:selectCheckboxMenu>
+							<p />
+
+
+							<h:outputText value="Experiência: " />
+							<p:selectOneRadio required="true" id="experiencia" value="#{a}">
+								<f:selectItem itemLabel="Sim" itemValue="Sim" />
+								<f:selectItem itemLabel="Não" itemValue="Nao" />
+							</p:selectOneRadio>
+
+							<p />
+
+
 							<h:outputText value="Sexo: " />
-							<p:selectOneRadio required="true" id="sexo" value="#{filtroService.eFiltro.sexo}">
+							<p:selectOneRadio required="true" id="sexo"
+								value="#{filtroService.eFiltro.sexo}">
 								<f:selectItem itemLabel="Homem" itemValue="Homem" />
 								<f:selectItem itemLabel="Mulher" itemValue="Mulher" />
 								<f:selectItem itemLabel="Indiferente" itemValue="Indiferente" />
@@ -31,7 +93,8 @@
 
 							<p />
 							<h:outputText value="Deficiência: " />
-							<p:selectOneRadio required="true" id="deficiencia" value="#{filtroService.eFiltro.deficiencia}">
+							<p:selectOneRadio required="true" id="deficiencia"
+								value="#{filtroService.eFiltro.deficiencia}">
 								<f:selectItem itemLabel="Sim" itemValue="Sim" />
 								<f:selectItem itemLabel="Indiferente" itemValue="Indiferente" />
 							</p:selectOneRadio>
@@ -51,69 +114,7 @@
 							<p />
 
 
-							<h:outputLabel for="estado" value="Estado:" />
-							<p:selectOneMenu required="true" filterMatchMode="startsWith"
-								style="width: 160px" panelStyle="width:150px" id="estado"
-								value="#{a}">
-								<f:selectItem itemLabel="" itemValue="" />
-								<f:selectItems value="#{checkboxView.cities}" />
-							</p:selectOneMenu>
 
-							<p />
-
-							<h:outputLabel for="cidades" value="Cidades:" />
-							<p:selectCheckboxMenu id="cidades"
-								value="#{a}" label="Cidades"
-								style="width: 160px"
-								filter="true" filterMatchMode="startsWith"
-								panelStyle="width:290px">
-								<f:selectItems value="#{a}" />
-							</p:selectCheckboxMenu>
-
-						
-
-
-							<p />
-
-							<h:outputLabel for="area" value="Área:" />
-							<p:selectOneMenu required="true" style="width: 160px"
-								panelStyle="width:150px" id="area" value="#{a}">
-								<f:selectItem itemLabel="" itemValue="" />
-								<f:selectItems value="#{a}" />
-							</p:selectOneMenu>
-							<P />
-							<h:outputLabel for="curso" value="Curso:" />
-							<p:selectOneMenu required="true" style="width: 160px"
-								panelStyle="width:150px" id="curso" value="#{a}">
-								<f:selectItem itemLabel="" itemValue="" />
-								<f:selectItems value="#{a}" />
-							</p:selectOneMenu>
-							<P />
-
-							<h:outputLabel for="semestre" value="Semestres:" />
-							<p:selectCheckboxMenu style="width: 160px" id="sem"
-								value="#{filtroService.eFiltro.semestre}" multiple="true"
-								filter="true" panelStyle="width:290px">
-								<f:selectItems value="#{a}" />
-							</p:selectCheckboxMenu>
-							<p />
-
-							<h:outputLabel for="idioma" value="Idioma:" />
-							<p:selectCheckboxMenu style="width: 160px" id="idioma"
-								value="#{a}" multiple="true"
-								filter="true" panelStyle="width:290px">
-								<f:selectItems value="#{a}" />
-							</p:selectCheckboxMenu>
-							<p />
-
-
-							<h:outputText value="Experiência: " />
-							<p:selectOneRadio required="true" id="experiencia" value="#{a}">
-								<f:selectItem itemLabel="Sim" itemValue="Sim" />
-								<f:selectItem itemLabel="Não" itemValue="Nao" />
-							</p:selectOneRadio>
-
-							<p />
 
 						</h:panelGrid>
 
