fazendo o filtro funcionar 23%
falta fazer um script para o evento onBlur no filtro.xhtml para mandar as cidades quando terminar de selecionar as mesmas

--- a/src/main/webapp/temfiltro.xhtml
+++ b/src/main/webapp/temfiltro.xhtml
@@ -32,7 +32,7 @@
 							<p />
 
 							<h:outputLabel for="cidades" value="Cidades:" />
-							<p:selectCheckboxMenu id="cidades"
+							<p:selectCheckboxMenu id="idCidades"
 								value="#{checkboxView.cities}" label="Cidades"
 								style="width:160px"
 								filter="true" filterMatchMode="startsWith"
@@ -131,6 +131,14 @@
 		</div>
 	</ui:define>
 </ui:composition>
+
+<script type="text/javascript">
+
+
+
+</script>
+
+
 </html>
 
 
