--- a/src/main/webapp/empresasADM.xhtml
+++ b/src/main/webapp/empresasADM.xhtml
@@ -11,7 +11,7 @@
 			href="resources/css/homeADM.css" />
 	</ui:define>
 
-	<ui:define name="title">Home ADM</ui:define>
+	<ui:define name="title">Empresas ADM</ui:define>
 
 
 	<ui:define name="content">
