--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -6,7 +6,7 @@
 <h:head>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="resources/css/cssEmp.css" />
-
+	<title>Login</title>
 </h:head>
 <h:body>
 	<p:growl>
