--- a/src/main/webapp/temfiltro.xhtml
+++ b/src/main/webapp/temfiltro.xhtml
@@ -8,7 +8,7 @@
 </h:head>
 <ui:composition
 	template="/WEB-INF/templateEmpresa/templateEmpresa.xhtml">
-	<ui:define name="title">Home</ui:define>
+	<ui:define name="title">Filtro</ui:define>
 
 	<ui:define name="content">
 		<div style="width: 500px; margin: auto;">
