--- a/src/main/webapp/alterarPerfilADM.xhtml
+++ b/src/main/webapp/alterarPerfilADM.xhtml
@@ -13,6 +13,7 @@
 		<h:body>
 
 			<center>
+			<div class="naosei">
 				<p:panel value="Login" style="width: 600px">
 
 					<h:graphicImage library="img" name="/logo-senai.png"
@@ -55,6 +56,7 @@
 
 					</p:panel>
 				</p:panel>
+				</div>
 			</center>
 
 		</h:body>
