--- a/src/main/webapp/telas-adm/temfiltroAdm.xhtml
+++ b/src/main/webapp/telas-adm/temfiltroAdm.xhtml
@@ -8,7 +8,7 @@
 </h:head>
 
 <ui:composition template="/WEB-INF/templateADM/templateADM.xhtml">
-	<ui:define name="title">Filtro</ui:define>
+	<ui:define name="title">Filtro ADM</ui:define>
 
 	<ui:define name="content">
 		<center>
