--- a/src/main/webapp/telas-empresa/alterarPerfilEmpresa.xhtml
+++ b/src/main/webapp/telas-empresa/alterarPerfilEmpresa.xhtml
@@ -71,9 +71,9 @@
 							</center>
 
 							<center>
-								<h:commandButton value="Alterar"
+								<h:commandButton value="Alterar" ajax="false"
 									action="#{alterarPerfilMBean.alterar}"
-									style="height: 30px; font-size: 14px; width:220px" ajax="false" />
+									style="height: 30px; font-size: 14px; width:220px; border: 0px;"  />
 							</center>
 						</h:form>
 
