--- a/src/main/webapp/telas-empresa/perfilEmpresa.xhtml
+++ b/src/main/webapp/telas-empresa/perfilEmpresa.xhtml
@@ -67,9 +67,9 @@
 							</center>
 
 							<center>
-								<h:commandButton value="Editar"
+								<h:commandButton value="Editar" ajax="false"
 									action="alterarPerfilEmpresa?faces-redirect=true"
-									style="height: 30px; font-size: 14px; width:220px" ajax="false" />
+									style="height: 30px; font-size: 14px; width:220px; border: 0px;"  />
 							</center>
 
 						</h:form>
