--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -33,6 +33,9 @@
 	<h:graphicImage  id="imgb" library="img" name="SENAaI.jpg" style="margin-bottom: 40px" />
 	</ui:insert>
 	
+	<a ><i class="fa fa-fw fa-user"></i>#{usuarioMBean.adm.nome}</a>
+	<p/>
+	<p/>
 	<a href="homeADM.xhtml"><i class="fa fa-fw fa-bar-chart"></i> Estatisticas</a>
 	<a href="empresasADM.xhtml"><i class="fa fa-fw fa-wrench"></i> Empresas</a>
 	<a href="criarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
