--- a/src/main/webapp/curriculo.xhtml
+++ b/src/main/webapp/curriculo.xhtml
@@ -12,34 +12,65 @@
 </h:head>
 <h:body>
 
+	<h:graphicImage library="img" name="/logo-senai.png"
+		style="width:300px; margin: 7px;" />
+		<p/>
 
-<div class="cl">
-	<h:panelGrid columns="1">
-			
-			<p:outputLabel id="nome" value="Nome: #{a}" />
-			<p/>
-			<p:outputLabel id="sexo" value="Sexo: #{a}" />
-			<p/>
-			<p:outputLabel id="def" value="Deficiência: #{a}" />
-			<p/>
-			<p:outputLabel id="form" value="Formações: #{a}" />
-			<p/>
-			<p:outputLabel id="curso" value="Curso: #{a}" />
-			<p/>
-			<p:outputLabel id="sem" value="Semestre: #{a}" />
-			<p/>
-			<p:outputLabel id="exp" value="Experiência: #{a}" />
-			<p/>
-			<p:outputLabel id="ing" value="Nivel de Inglês: #{a}" />
-			<p/>
-			<p:outputLabel id="esp" value="Nivel de Espanhol: #{a}" />
-			
+	<div align="center">
+		<h:panelGrid columns="1">
+
+			<p:outputLabel id="nome" value=" #{usuarioMBean.emp.representante}"
+				style="margin-left: 10%" />
+			<p:outputLabel id="email" value=" #{usuarioMBean.emp.email}"
+				style="margin-left: 20%" />
+			<p:outputLabel id="sexo"
+				value="Masculino - #{usuarioMBean.emp.telefone} - #{a}18 anos"
+				style="margin-left: -10%" />
+			<p:outputLabel id="def" value="Deficiência: #{usuarioMBean.emp.rua}"
+				style="margin-left: 20%" />
+			<p />
+			<p:outputLabel for="curso" value="Curso:"
+				style="margin-left: -60%;font-weight:bold;text-decoration:underline" />
+			<p />
+			<p:outputLabel id="curso" value="#{usuarioMBean.emp.rua}"
+				style="margin-left: -60%" />
+			<p />
+			<p:outputLabel for="sem" value="Semestre:"
+				style="margin-left: -60%;font-weight:bold;text-decoration:underline" />
+			<p />
+			<p:outputLabel id="sem" value="#{usuarioMBean.emp.rua}"
+				style="margin-left: -60%" />
+			<p />
+			<p:outputLabel for="ing" value="Nível de Inglês:"
+				style="margin-left: -60%;font-weight:bold;text-decoration:underline" />
+			<p />
+			<p:outputLabel id="ing" value="#{usuarioMBean.emp.rua}"
+				style="margin-left: -60%" />
+			<p />
+			<p:outputLabel for="esp" value="Nível de Espanhol:"
+				style="margin-left: -60%;font-weight:bold;text-decoration:underline" />
+			<p />
+			<p:outputLabel id="esp" value="#{usuarioMBean.emp.rua}"
+				style="margin-left: -60%" />
+			<p />
+			<p:outputLabel for="exp" value="Experiência:"
+				style="margin-left: -60%;font-weight:bold;text-decoration:underline" />
+			<p />
+			<p:outputLabel id="exp" value="#{usuarioMBean.emp.cidade}"
+				style="margin-left: -60%" />
+			<p />
+			<p:outputLabel for="form" value="Formações:"
+				style="margin-left: -60%;font-weight:bold;text-decoration:underline" />
+			<p />
+			<p:outputLabel id="form" value="#{usuarioMBean.emp.rua}"
+				style="margin-left: -60%" />
+			<p />
 
 
 
 
 
-	</h:panelGrid>
+		</h:panelGrid>
 	</div>
 
 </h:body>
