--- a/src/main/webapp/novaemp.xhtml
+++ b/src/main/webapp/novaemp.xhtml
@@ -6,6 +6,7 @@
 <h:head>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="resources/css/cssEmp.css" />
+		<title>Nova Empresa</title>
 </h:head>
 <h:body>
 	<p:growl>
