--- a/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
@@ -29,9 +29,9 @@
 			<h:panelGrid>
 				<p:dialog header="Ajuda" widgetVar="formem" resizable="false"
 					draggable="false">
-			<h:panelGrid columns="2" cellpadding="3">
+			<h:panelGrid columns="2" cellpadding="3" style="width:600px">
 				Se tiver algum problema entrar em contato 
-				com o seguinte telefone 99999-9999<br /> ou mande um 
+				com o seguinte telefone (19)99999-9999<br /> ou mande um 
 		        email para teste@gmail.com
 			</h:panelGrid>
 				</p:dialog>
