--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -75,7 +75,7 @@
 							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
 					</h:form>
 				</center>
-				CLICA NA IMAGEM PORRA "provisorio"
+				CLICA NA IMAGEM PRÉDIO/PESSOA PORRA!!!!!  "provisorio"
 			</p:panel>
 		</p:panel>
 
