--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -33,7 +33,7 @@
 	<h:graphicImage  id="imgb" library="img" name="SENAaI.jpg" style="margin-bottom: 40px" />
 	</ui:insert>
 	
-	<a ><i class="fa fa-fw fa-user"></i>#{usuarioMBean.adm.nome}</a>
+	<a ><i class="fa fa-fw fa-user"></i>#{usuarioMBean.adm.nomex}</a>
 	<p/>
 	<p/>
 	<a href="homeADM.xhtml"><i class="fa fa-fw fa-bar-chart"></i> Estatisticas</a>
