Botao Info no template

--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -65,6 +65,11 @@
 </div>
 
 
+<p:panelGrid>
+<p:commandButton type="button" icon="ui-icon-info" style="border-radius: 60px; width: 40px; height: 40px; position: fixed; bottom: 20px; right: 20px;">
+
+</p:commandButton>
+</p:panelGrid>
 
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
