--- a/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
@@ -45,6 +45,10 @@
 
 		</ui:insert>
 	</div>
+	
+	<div class="footer">
+        <ui:include src="/WEB-INF/templateEmpresa/footer.xhtml"></ui:include>
+    </div>
 
 
 	<script
