--- a/src/main/webapp/WEB-INF/templateEmpresa/footer.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/footer.xhtml
@@ -4,17 +4,14 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-	
-
-<h:form>
-	
-	<div class="footer" align="right" style="margin-top: 2%" >	
-	COPIA NÃO COMÉDIA!
-	</div>
-	
-</h:form>
 
 
+
+<div class="footer" align="right" style="margin-top: 1%" >
+	<p:panel styleClass="footer" style=" height: 5%;background: #DF0101">
+        <p style="font-size: 15; color: #FFFFFF">Copyright &copy;2018 El Ber1zera de la Quebrada</p>   
+        </p:panel>
+    </div>
 
 </html>
 
