--- a/src/main/webapp/WEB-INF/templateEmpresa/header.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/header.xhtml
@@ -5,6 +5,9 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
+<h:head>
+	<link rel="stylesheet" type="text/css" href="/secv/resources/css/cssEmp.css" />
+</h:head>
 
 
 <div align="center">
@@ -45,6 +48,7 @@
 		
 
 	</p:toolbar>
+	<p:progressBar id="pbi" style="height:8px" mode="indeterminate"/>
 </h:form>
 
 
