--- a/src/main/webapp/telas-empresa/perfilEmpresa.xhtml
+++ b/src/main/webapp/telas-empresa/perfilEmpresa.xhtml
@@ -6,7 +6,7 @@
 
 <ui:composition
 	template="/WEB-INF/templateEmpresa/templateEmpresa.xhtml">
-
+	<ui:define name="title">Perfil da Empresa</ui:define>
 	<ui:define name="content">
 
 		<h:body>
